modules/gdscript/tests/scripts/parser/errors/invalid_dictionary_destructuring_with_missing_initializer.gd
func test():
    var {foo = a, bar = b}
